--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
                 <img src="./images/banner.jpeg" alt="banner-image" />
                 <div class="image-overlay-text">
                     <div class="font-lg padding-1">
-                        HOP<span>SOP</span> COLLECTION 2022
+                        Shoppy Collection 2022
                     </div>
-                    <div class="font-sm padding-2">To Go Place for</div>
-                    <div class="font-xl padding-3">WANDERLUST</div>
+                    <div class="font-sm padding-2">Go To Place for</div>
                     <button class="cs-btn cs-btn-primary">
                         Shop Now<i class="fas fa-arrow-right ml-1"></i>
                     </button>
