--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="font-sm padding-2">Go To Place for</div>
                     <button class="cs-btn cs-btn-primary">
-                        Shop Now<i class="fas fa-arrow-right ml-1"></i>
+                        Shop Now<i class="fas fa-arrow-right"></i>
                     </button>
                 </div>
             </div>
