--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <ul class="style-none flex-row">
                     <li class="list-item"><a class="color-white" href="/index.html">Home</a></li>
-                    <li class="list-item"><a class="color-white" href="/product/product.html">Product</a></li>
+                    <li class="list-item"><a class="color-white" href="/product/index.html">Product</a></li>
                 </ul>
             </div>
             <div class="search flex-row">
