--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <ul class="style-none flex-row">
                     <li class="list-item"><a class="color-white" href="/index.html">Home</a></li>
                     <li class="list-item"><a class="color-white" href="/product/index.html">Product</a></li>
+                    <li class="list-item"><a class="color-white" href="/cart/index.html">Cart</a></li>
                 </ul>
             </div>
             <div class="search flex-row">
