--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/common.css" />
     <link rel="stylesheet" href="https://main--eager-nightingale-ec3f88.netlify.app/components/component.css">
 </head>
+
 <body>
     <div class="container">
         <nav class="header">
@@ -21,6 +22,7 @@
                 <ul class="style-none flex-row">
                     <li class="list-item"><a class="color-white" href="/index.html">Home</a></li>
                     <li class="list-item"><a class="color-white" href="/product/index.html">Product</a></li>
+                    <li class="list-item"><a class="color-white" href="/wishlist/index.html">wishlist</a></li>
                 </ul>
             </div>
             <div class="search flex-row">
