--- a/authentication/logout/index.html
+++ b/authentication/logout/index.html
@@ -6,22 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-
-    <link rel="stylesheet" href="/index.css" />
-    <link rel="stylesheet" href="/common.css" />
     <link rel="stylesheet" href="https://main--eager-nightingale-ec3f88.netlify.app/components/component.css">
+    <link rel="stylesheet" href="../../index.css" />
+    <link rel="stylesheet" href="../../common.css" />
+    <link rel="stylesheet" href="./logout.css" />
 </head>
+
 <body>
     <div class="container">
         <nav class="header">
             <div class="header__btm__left">
                 <div class="logo">
-                    <img src="./images/logo.png" />
+                    <img src="../../images/logo.png" />
                 </div>
                 <ul class="style-none flex-row">
                     <li class="list-item"><a class="color-white" href="/index.html">Home</a></li>
                     <li class="list-item"><a class="color-white" href="/product/index.html">Product</a></li>
-                    <li class="list-item"><a class="color-white" href="/authentication/logout/index.html">logout</a></li>
+                    <li class="list-item"><a class="color-white" href="/authentication/signin/index.html">Login</a></li>
                 </ul>
             </div>
             <div class="search flex-row">
@@ -32,16 +33,11 @@
         </nav>
 
         <div class="main-container">
-            <div class="banner-container component-image-square">
-                <img src="./images/banner.jpeg" alt="banner-image" />
-                <div class="image-overlay-text">
-                    <div class="font-lg padding-1">
-                        Shoppy Collection 2022
-                    </div>
-                    <div class="font-sm padding-2">Go To Place for</div>
-                    <button class="cs-btn cs-btn-primary">
-                        Shop Now<i class="fas fa-arrow-right"></i>
-                    </button>
+            <div class="logout">
+                <div class="logout__msg">Please login to access your card & personalize data</div>
+                <div class="logout__button">
+                    <button class="cs-btn cs-btn-primary"> <a href="/authentication/signin/index.html">Login</a></button>
+                    <button class="cs-btn cs-btn-primary"> <a class="color-white" href="/index.html">Home</a></button>
                 </div>
             </div>
         </div>
