--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
+    <title>Home Page</title>
 
     <link rel="stylesheet" href="/index.css" />
     <link rel="stylesheet" href="/common.css" />
@@ -46,7 +46,6 @@
             </div>
         </div>
     </div>
-    <script src="https://kit.fontawesome.com/482acc5102.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
