eye icon fixed for password field

--- a/authentication/signup/index.html
+++ b/authentication/signup/index.html
@@ -45,9 +45,10 @@
                                     <input id="email" class="custom__input" type="email" placeholder="enter email" required/>
                                 </div>
 
-                                <div class="padding-buttom-10">
+                                <div class="padding-buttom-10 password-container">
                                     <label for="password">Password <span class="color-red">*</span> </label><br>
                                     <input id="password" class="custom__input" type="password" placeholder="enter password" required />
+                                    <i class="fa fa-eye eye-icon" aria-hidden="true"></i>
                                 </div>
                             </form>
                             <div class="form__action">
@@ -69,6 +70,7 @@
             </div>
         </div>
     </div>
+    <script src="https://kit.fontawesome.com/482acc5102.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
