--- a/authentication/signin/index.html
+++ b/authentication/signin/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SignIn Page</title>
+    <title>signin Page</title>
     <link rel="stylesheet" href="https://main--eager-nightingale-ec3f88.netlify.app/components/component.css">
     <link rel="stylesheet" href="../../index.css" />
     <link rel="stylesheet" href="../../common.css" />
@@ -45,9 +45,10 @@
                                     <input id="email" class="custom__input" type="email" placeholder="enter email" required/>
                                 </div>
 
-                                <div class="padding-buttom-10">
+                                <div class="padding-buttom-10 password-container">
                                     <label for="password">Password <span class="color-red">*</span> </label><br>
                                     <input id="password" class="custom__input" type="password" placeholder="enter password" required />
+                                    <i class="fa fa-eye eye-icon" aria-hidden="true"></i>
                                 </div>
                             </form>
                             <div class="form__action">
@@ -72,6 +73,7 @@
             </div>
         </div>
     </div>
+    <script src="https://kit.fontawesome.com/482acc5102.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
