--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/common.css" />
     <link rel="stylesheet" href="https://main--eager-nightingale-ec3f88.netlify.app/components/component.css">
 </head>
+
 <body>
     <div class="container">
         <nav class="header">
@@ -46,6 +47,7 @@
             </div>
         </div>
     </div>
+    <script src="https://kit.fontawesome.com/482acc5102.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
