logo icon fixed

--- a/authentication/logout/index.html
+++ b/authentication/logout/index.html
@@ -21,8 +21,10 @@
                 </div>
                 <ul class="style-none flex-row">
                     <li class="list-item"><a class="color-white" href="/index.html">Home</a></li>
-                    <li class="list-item"><a class="color-white" href="/product/index.html">Product</a></li>
-                    <li class="list-item"><a class="color-white" href="/authentication/signin/index.html">Login</a></li>
+                    <li class="list-item">
+                        <a class="color-white" href="/authentication/signin/index.html"> <i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="search flex-row">
@@ -36,7 +38,7 @@
             <div class="logout">
                 <div class="logout__msg">Please login to access your card & personalize data</div>
                 <div class="logout__button">
-                    <button class="cs-btn cs-btn-primary"> <a href="/authentication/signin/index.html">Login</a></button>
+                    <button class="cs-btn cs-btn-primary"> <a href="/authentication/signin/index.html"> <i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a></button>
                     <button class="cs-btn cs-btn-primary"> <a class="color-white" href="/index.html">Home</a></button>
                 </div>
             </div>
