--- a/authentication/signin/index.html
+++ b/authentication/signin/index.html
@@ -61,7 +61,8 @@
                             </div>
                         </div>
                         <div class="modal__footer">
-                            <button class="cs-btn cs-btn-primary width-100">Login</button>
+                            <button class="cs-btn cs-btn-primary width-100">
+                                <i class="fa fa-sign-in" aria-hidden="true"></i>Login</button>
                         </div>
                         <div class="modal__footer">
                             <button class="cs-btn cs-btn-light width-100">
