--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/common.css" />
     <link rel="stylesheet" href="https://main--eager-nightingale-ec3f88.netlify.app/components/component.css">
 </head>
+
 <body>
     <div class="container">
         <nav class="header">
@@ -21,9 +22,21 @@
                 <ul class="style-none flex-row">
                     <li class="list-item"><a class="color-white" href="/index.html">Home</a></li>
                     <li class="list-item"><a class="color-white" href="/product/index.html">Product</a></li>
-                    <li class="list-item"><a class="color-white" href="/cart/index.html">Cart</a></li>
-                    <li class="list-item"><a class="color-white" href="/wishlist/index.html">wishlist</a></li>
-                    <li class="list-item"><a class="color-white" href="/authentication/logout/index.html">logout</a></li>
+                    <li class="list-item">
+                        <a class="color-white" href="/cart/index.html">
+                            <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart
+                        </a>
+                    </li>
+                    <li class="list-item">
+                        <a class="color-white" href="/wishlist/index.html">
+                            <i class="fa fa-heart" aria-hidden="true"></i> wishlist
+                        </a>
+                    </li>
+                    <li class="list-item">
+                        <a class="color-white" href="/authentication/logout/index.html">
+                            <i class="fa fa-sign-out" aria-hidden="true"></i> logout
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="search flex-row">
@@ -38,9 +51,9 @@
                 <img src="./images/banner.jpeg" alt="banner-image" />
                 <div class="image-overlay-text">
                     <div class="font-lg padding-1">
-                        Shoppy Collection 2022
+                        Shoppy Collection
                     </div>
-                    <div class="font-sm padding-2">Go To Place for</div>
+                    <div class="font-sm padding-2">Go To Place for Shopping</div>
                     <button class="cs-btn cs-btn-primary">
                         Shop Now<i class="fas fa-arrow-right"></i>
                     </button>
