--- a/product/index.html
+++ b/product/index.html
@@ -21,8 +21,22 @@
                 </div>
                 <ul class="style-none flex-row">
                     <li class="list-item"><a class="color-white" href="/index.html">Home</a></li>
-                    <li class="list-item"><a class="color-white" href="/product/product.html">Product</a></li>
-                    <li class="list-item"><a class="color-white" href="/cart/index.html">Cart</a></li>
+                    <li class="list-item"><a class="color-white" href="/product/index.html">Product</a></li>
+                    <li class="list-item">
+                        <a class="color-white" href="/cart/index.html">
+                            <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart
+                        </a>
+                    </li>
+                    <li class="list-item">
+                        <a class="color-white" href="/wishlist/index.html">
+                            <i class="fa fa-heart" aria-hidden="true"></i> wishlist
+                        </a>
+                    </li>
+                    <li class="list-item">
+                        <a class="color-white" href="/authentication/logout/index.html">
+                            <i class="fa fa-sign-out" aria-hidden="true"></i> logout
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="search flex-row">
