--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </ul>
             </div>
             <div class="search flex-row">
-                <input type="text" class="custom__input">
+                <input type="text" class="custom__input" placeholder="Search your product">
                 <button class="cs-btn cs-btn-primary">Search</button>
             </div>
             <!-- <div class="header__btm__right"></div> -->
