--- a/product/index.html
+++ b/product/index.html
@@ -348,6 +348,35 @@
     </div>
     </div>
     </div>
+
+    <footer class="footer-container">
+        <div class="footer-text">
+            Anand Tiwari
+        </div>
+        <ul class="flex-row ">
+            <li class="footer-list-icon list-style-none ">
+                <a href="https://github.com/anand-tiwari">
+                    <span class="footer-icon ">
+                    <i class="fa fa-github icon-white text-sm " aria-hidden="true "></i>
+                  </span>
+                </a>
+            </li>
+            <li class="footer-list-icon list-style-none ">
+                <a href="https://twitter.com/__anand__tiwari">
+                    <span class="footer-icon ">
+                    <i class="fa fa-twitter icon-white text-sm " aria-hidden="true "></i>
+                  </span>
+                </a>
+            </li>
+            <li class="footer-list-icon list-style-none ">
+                <a href="https://www.linkedin.com/in/anand-tiwari-30455b105/">
+                    <span class="footer-icon ">
+                    <i class="fa fa-linkedin icon-white text-sm " aria-hidden="true "></i>
+                  </span>
+                </a>
+            </li>
+        </ul>
+    </footer>
     </div>
     <script src="https://kit.fontawesome.com/482acc5102.js" crossorigin="anonymous"></script>
 </body>
