--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </nav>
 
         <div class="main-container">
-            <div class="banner-container component-image-square">
+            <div class="banner-container">
                 <img src="./images/banner.jpeg" alt="banner-image" />
                 <div class="image-overlay-text">
                     <div class="font-lg padding-1">
@@ -59,9 +59,84 @@
                     </button>
                 </div>
             </div>
+
+            <div class="category__section">
+                <h2 class="category__title">SHOP BY CATEGORY</h2>
+                <div class="category">
+                    <div class="category__card">
+                        <div class="card__imagecontainer">
+                            <img src="../images/shoes1.webp">
+                        </div>
+                        <div class="card__content text-center">
+                            Shoes
+                        </div>
+                    </div>
+                    <div class="category__card">
+                        <div class="card__imagecontainer">
+                            <img src="../images/shoes1.webp">
+                        </div>
+                        <div class="card__content text-center">
+                            Shoes
+                        </div>
+                    </div>
+                    <div class="category__card">
+                        <div class="card__imagecontainer">
+                            <img src="../images/jeans.jpeg">
+                        </div>
+                        <div class="card__content text-center">
+                            jeans
+                        </div>
+                    </div>
+                    <div class="category__card">
+                        <div class="card__imagecontainer">
+                            <img src="../images/t-shirt.webp">
+                        </div>
+                        <div class="card__content text-center">
+                            Tshirt
+                        </div>
+                    </div>
+                    <div class="category__card">
+                        <div class="card__imagecontainer">
+                            <img src="../images/shirt.webp">
+                        </div>
+                        <div class="card__content text-center">
+                            Shirt
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <footer class="footer-container">
+            <div class="footer-text">
+                Anand Tiwari
+            </div>
+            <ul class="flex-row ">
+                <li class="footer-list-icon list-style-none ">
+                    <a href="https://github.com/anand-tiwari">
+                        <span class="footer-icon ">
+                        <i class="fa fa-github icon-white text-sm " aria-hidden="true "></i>
+                      </span>
+                    </a>
+                </li>
+                <li class="footer-list-icon list-style-none ">
+                    <a href="https://twitter.com/__anand__tiwari">
+                        <span class="footer-icon ">
+                        <i class="fa fa-twitter icon-white text-sm " aria-hidden="true "></i>
+                      </span>
+                    </a>
+                </li>
+                <li class="footer-list-icon list-style-none ">
+                    <a href="https://www.linkedin.com/in/anand-tiwari-30455b105/">
+                        <span class="footer-icon ">
+                        <i class="fa fa-linkedin icon-white text-sm " aria-hidden="true "></i>
+                      </span>
+                    </a>
+                </li>
+            </ul>
+        </footer>
     </div>
-    <script src="https://kit.fontawesome.com/482acc5102.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/482acc5102.js " crossorigin="anonymous "></script>
 </body>
 
 </html>
