--- a/product/index.html
+++ b/product/index.html
@@ -14,37 +14,39 @@
 
 <body>
     <div class="container">
-        <nav class="header">
-            <div class="header__btm__left">
-                <div class="logo">
-                    <img src="../images/logo.png" />
+        <header>
+            <nav class="header">
+                <div class="header__btm__left">
+                    <div class="logo">
+                        <img src="../images/logo.png" />
+                    </div>
+                    <ul class="style-none flex-row">
+                        <li class="list-item"><a class="color-white" href="/index.html">Home</a></li>
+                        <li class="list-item"><a class="color-white" href="/product/index.html">Product</a></li>
+                        <li class="list-item">
+                            <a class="color-white" href="/cart/index.html">
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart
+                            </a>
+                        </li>
+                        <li class="list-item">
+                            <a class="color-white" href="/wishlist/index.html">
+                                <i class="fa fa-heart" aria-hidden="true"></i> wishlist
+                            </a>
+                        </li>
+                        <li class="list-item">
+                            <a class="color-white" href="/authentication/logout/index.html">
+                                <i class="fa fa-sign-out" aria-hidden="true"></i> logout
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-                <ul class="style-none flex-row">
-                    <li class="list-item"><a class="color-white" href="/index.html">Home</a></li>
-                    <li class="list-item"><a class="color-white" href="/product/index.html">Product</a></li>
-                    <li class="list-item">
-                        <a class="color-white" href="/cart/index.html">
-                            <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart
-                        </a>
-                    </li>
-                    <li class="list-item">
-                        <a class="color-white" href="/wishlist/index.html">
-                            <i class="fa fa-heart" aria-hidden="true"></i> wishlist
-                        </a>
-                    </li>
-                    <li class="list-item">
-                        <a class="color-white" href="/authentication/logout/index.html">
-                            <i class="fa fa-sign-out" aria-hidden="true"></i> logout
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="search flex-row">
-                <input type="text" class="custom__input" placeholder="Search your product">
-                <button class="cs-btn cs-btn-primary">Search</button>
-            </div>
-            <!-- <div class="header__btm__right"></div> -->
-        </nav>
+                <div class="search flex-row">
+                    <input type="text" class="custom__input" placeholder="Search your product">
+                    <button class="cs-btn cs-btn-primary">Search</button>
+                </div>
+                <!-- <div class="header__btm__right"></div> -->
+            </nav>
+        </header>
 
         <div class="main-container">
 
