--- a/cart/index.html
+++ b/cart/index.html
@@ -15,10 +15,10 @@
 <body>
     <div class="container">
         <header>
-            <nav class="header">
+            <nav class="header flex-wrap">
                 <div class="header__btm__left">
                     <div class="logo">
-                        <img src="../images/logo.png" />
+                        <a class="color-white" href="/index.html"><img src="../images/logo.png" /></a>
                     </div>
                     <ul class="style-none flex-row">
                         <li class="list-item"><a class="color-white" href="/index.html">Home</a></li>
