--- a/authentication/signup/index.html
+++ b/authentication/signup/index.html
@@ -17,7 +17,7 @@
         <nav class="header">
             <div class="header__btm__left">
                 <div class="logo">
-                    <img src="../../images/logo.png" />
+                    <a class="color-white" href="/index.html"><img src="../../images/logo.png" /></a>
                 </div>
                 <ul class="style-none flex-row">
                     <li class="list-item"><a class="color-white" href="/index.html">Home</a></li>
