--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -17,11 +17,11 @@
         <nav class="header">
             <div class="header__btm__left">
                 <div class="logo">
-                    <img src="../images/logo.png" />
+                    <a class="color-white" href="/index.html"><img src="../images/logo.png" /></a>
                 </div>
                 <ul class="style-none flex-row">
                     <li class="list-item"><a class="color-white" href="/index.html">Home</a></li>
-                    <li class="list-item"><a class="color-white" href="/product/product.html">Product</a></li>
+                    <li class="list-item"><a class="color-white" href="/product/index.html">Product</a></li>
                     <li class="list-item"><a class="color-white" href="/wishlist/index.html">wishlist</a></li>
                 </ul>
             </div>
